--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
 <html>
-<title>Jason Wassel</title>
+<head>
+<title>CarpoolND</title>
 <style>
 body {background-color:#b0c4de;}
 p {font-size:14px}
 p.Helv{font-family:Helvetica,serif}
 </style>
+</head>
 <body>
-<h2>Home</h2>
+<center><h2>CarpoolND</h2></center>
 
-<p><a href="http://orchestra.cselab.nd.edu/~jwassel/insertProfile.html">Create a profile</a>
-<a href="http://orchestra.cselab.nd.edu/~jwassel/insertCar.html">Create a car</a>
-<a href="http://orchestra.cselab.nd.edu/~jwassel/insertRoute.html">Create a route</a>
+<center>
+<form action="homePage.php" method="get">
+Username: <input name="username"/>
+<br></br>
+Password: <input name="password"/>
+</form>
 
-</p>
-
+<a href="http://orchestra.cselab.nd.edu/~jwassel/insertProfile.html">Create a profile</a>
+</center>
 </body>
 </html>
