index and homepage

--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@ p.Helv{font-family:Helvetica,serif}
 <center><h2>CarpoolND</h2></center>
 
 <center>
-<form action="homePage.php" method="get">
+<form action="homePage.php" method="post">
 Username: <input name="username"/>
 <br></br>
 Password: <input name="password"/>
+<br></br>
+<input type="submit" />
 </form>
 
 <a href="http://orchestra.cselab.nd.edu/~jwassel/insertProfile.html">Create a profile</a>
