adde carpool nd to path

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ Password: <input name="password"/>
 <input type="submit" />
 </form>
 
-<a href="http://orchestra.cselab.nd.edu/~jwassel/insertProfile.html">Create a profile</a>
+<a href="http://orchestra.cselab.nd.edu/~jwassel/CarpoolND/insertProfile.html">Create a profile</a>
 </center>
 </body>
 </html>
