ability to insert car and carpool v.1

--- a/insertCar.html
+++ b/insertCar.html
@@ -3,8 +3,8 @@
 <form action="insertCar.php" method="get">
 Make: <input name="Make"/>
 Model: <input name="Model"/>
-Seats: <input name="Seats"/>
-Occupied Seats: <input name="Occupiedseats"/>
+Year: <input name="Year"/>
+Number of Seats: <input name="Numberofseats"/>
 <input type="submit"/>
 </form>
 </body>
