--- a/insertCarpool.html
+++ b/insertCarpool.html
@@ -5,9 +5,34 @@ Username: <input name="username"/>
 Starting Point: <input name="startingPoint"/>
 Destination: <input name="destination"/>
 Start Date: <input name="startDate"/>
-End Date: <input name="endDate"/>
+Start Time: <input name="startTime"/>
+Estimate Time of Arrival: <input name="ETA"/>
+Description: <input name="description"/>
+Open Seats: <input name="openSeats"/>
+Driver: <input name="driver"/>
+Passenger 1: <input name="passenger1"/>
+Passenger 2: <input name="passenger2"/>
+Passenger 3: <input name="passenger3"/>
+Passenger 4: <input name="passenger4"/>
+Passenger 5: <input name="passenger5"/>
+Passenger 6: <input name="passenger6"/>
+Passenger 7: <input name="passenger7"/>
+Passenger 8: <input name="passenger8"/>
+
 <input type="submit"/>
 </form>
 </body>
 </html>
-
+carpool_id
+car_id
+startingpoint
+destinatino
+startdate
+starttime
+eta
+description
+openseats
+driver
+user1
+..
+8
