making forms look nicer

--- a/insertCar.html
+++ b/insertCar.html
@@ -1,11 +1,26 @@
 <html>
+<head>
+<style>
+body {background-color:#b0c4de;}
+p {font-size:14px}
+p.Helv{font-family:Helvetica,serif}
+</style>
+</head>
 <body>
+<center><h2> Add a Car to your Profile</h2></center>
 <form action="insertCar.php" method="get">
+<div id= "inner" style="background-color:#ffcc00">
 Owner: <input name="owner"/>
+<br></br>
 Make: <input name="Make"/>
+<br></br>
 Model: <input name="Model"/>
+<br></br>
 Year: <input name="Year"/>
+<br></br>
 Number of Seats: <input name="Numberofseats"/>
+<br></br>
+</div>
 <input type="submit"/>
 </form>
 </body>
