--- a/insertCarpool.html
+++ b/insertCarpool.html
@@ -1,25 +1,52 @@
 <html>
+<head>
+<style>
+body {background-color:#b0c4de;}
+p {font-size:14px}
+p.Helv{font-family:Helvetica,serif}
+</style>
+</head>
 <body>
+<center><h2> Create a Carpool</h2></center>
 <form action="insertCarpool.php" method="get">
+<div id= "inner" style="background-color:#ffcc00">
 Username: <input name="username"/>
+<br></br>
 Starting Point: <input name="startingPoint"/>
+<br></br>
 Destination: <input name="destination"/>
+<br></br>
 Start Date: <input name="startDate"/>
+<br></br>
 Start Time: <input name="startTime"/>
+<br></br>
 Estimate Time of Arrival: <input name="ETA"/>
+<br></br>
 Description: <input name="description"/>
+<br></br>
 Open Seats: <input name="openSeats"/>
+<br></br>
 Driver: <input name="driver"/>
+<br></br>
 Passenger 1: <input name="passenger1"/>
+<br></br>
 Passenger 2: <input name="passenger2"/>
+<br></br>
 Passenger 3: <input name="passenger3"/>
+<br></br>
 Passenger 4: <input name="passenger4"/>
+<br></br>
 Passenger 5: <input name="passenger5"/>
+<br></br>
 Passenger 6: <input name="passenger6"/>
+<br></br>
 Passenger 7: <input name="passenger7"/>
+<br></br>
 Passenger 8: <input name="passenger8"/>
+<br></br>
 
 <input type="submit"/>
+</div>
 </form>
 </body>
 </html>
