--- a/insertProfile.html
+++ b/insertProfile.html
@@ -1,12 +1,28 @@
 <html>
+<head>
+<style>
+body {background-color:#b0c4de;}
+p {font-size:14px}
+p.Helv{font-family:Helvetica,serif}
+</style>
+</head>
 <body>
+<center><h2> Create Your Profile</h2></center>
 <form action="insertProfile.php" method="get">
+<div id= "inner" style="background-color:#ffcc00">
 Username: <input name="username"/>
+<br></br>
 First Name: <input name="firstname"/>
+<br></br>
 Last Name: <input name="lastname"/>
+<br></br>
 Phone Number: <input name="phonenumber"/>
+<br></br>
 Email: <input name="email"/>
+<br></br>
 Password: <input name="password"/>
+<br></br>
+</div>
 <input type="submit"/>
 </form>
 </body>
