making everyting look nicer

--- a/index.html
+++ b/index.html
@@ -2,21 +2,23 @@
 <head>
 <title>CarpoolND</title>
 <style>
-body {background-color:#b0c4de;}
+body {background-color:#041c42;}
 p {font-size:14px}
 p.Helv{font-family:Helvetica,serif}
 </style>
 </head>
 <body>
-<center><h2>CarpoolND</h2></center>
+<center><h2 style="background-color:#ffcc00">CarpoolND</h2></center>
 
 <center>
 <form action="homePage.php" method="post">
+<div id= "inner" style="background-color:#ffcc00">
 Username: <input name="username"/>
 <br></br>
 Password: <input name="password"/>
 <br></br>
 <input type="submit" />
+</div>
 </form>
 
 <a href="http://orchestra.cselab.nd.edu/~jwassel/CarpoolND/insertProfile.html">Create a profile</a>
