--- a/insertCar.html
+++ b/insertCar.html
@@ -1,13 +1,13 @@
 <html>
 <head>
 <style>
-body {background-color:#b0c4de;}
+body {background-color:#041c42;}
 p {font-size:14px}
 p.Helv{font-family:Helvetica,serif}
 </style>
 </head>
 <body>
-<center><h2> Add a Car to your Profile</h2></center>
+<center><h2 style="background-color:#ffcc00"> Add a Car to your Profile</h2></center>
 <form action="insertCar.php" method="get">
 <div id= "inner" style="background-color:#ffcc00">
 Owner: <input name="owner"/>
