--- a/insertCarpool.html
+++ b/insertCarpool.html
@@ -1,13 +1,13 @@
 <html>
 <head>
 <style>
-body {background-color:#b0c4de;}
+body {background-color:#041c42;}
 p {font-size:14px}
 p.Helv{font-family:Helvetica,serif}
 </style>
 </head>
 <body>
-<center><h2> Create a Carpool</h2></center>
+<center><h2 style="background-color:#ffcc00"> Create a Carpool</h2></center>
 <form action="insertCarpool.php" method="get">
 <div id= "inner" style="background-color:#ffcc00">
 Username: <input name="username"/>
