--- a/insertSearcher.html
+++ b/insertSearcher.html
@@ -1,12 +1,27 @@
 <html>
+<head>
+<style>
+body {background-color:#041c42;}
+p {font-size:14px}
+p.Helv{font-family:Helvetica,serif}
+</style>
+</head>
 <body>
+<center><h2 style="background-color:#ffcc00"> Request a Ride</h2></center>
 <form action="insertSearcher.php" method="get">
+<div id= "inner" style="background-color:#ffcc00">
 Username: <input name="username"/>
+<br></br>
 Start Date: <input name=startDate"/>
+<br></br>
 Starting Point: <input name="startingPoint"/>
+<br></br>
 Destination: <input name="destination"/>
+<br></br>
 Description: <input name="description"/>
+<br></br>
 <input type="submit"/>
+</div>
 </form>
 </body>
 </html>
