fixing update time formatting

--- a/updateTime.html
+++ b/updateTime.html
@@ -1,9 +1,14 @@
 <html>
+<head>
+<link rel="stylesheet" type="text/css" href="css/style.css">
+</head>
 <body>
 <form action="updateTime.php" method="get">
+<div class="insertForm">
 New Time: <input name="time"/>
 Date: <input name="date"/>
 Username: <input name="username"/>
+</div>
 <input type="submit"/>
 </form>
 </body>
