--- a/index.html
+++ b/index.html
@@ -1,18 +1,14 @@
 <html>
 <head>
 <title>CarpoolND</title>
-<style>
-body {background-color:#041c42;}
-p {font-size:14px}
-p.Helv{font-family:Helvetica,serif}
-</style>
+<link rel="stylsheet" type="text/css" href='css/style.css">
 </head>
 <body>
 <center><h2 style="background-color:#ffcc00">CarpoolND</h2></center>
 
 <center>
 <form action="homePage.php" method="post">
-<div id= "inner" style="background-color:#ffcc00">
+<div class="insertForm">
 Username: <input name="username"/>
 <br></br>
 Password: <input name="password"/>
