--- a/insertCar.html
+++ b/insertCar.html
@@ -1,15 +1,11 @@
 <html>
 <head>
-<style>
-body {background-color:#041c42;}
-p {font-size:14px}
-p.Helv{font-family:Helvetica,serif}
-</style>
+<link rel="stylsheet" type="text/css" href='css/style.css">
 </head>
 <body>
 <center><h2 style="background-color:#ffcc00"> Add a Car to your Profile</h2></center>
 <form action="insertCar.php" method="get">
-<div id= "inner" style="background-color:#ffcc00">
+<div class="insertForm">
 Owner: <input name="owner"/>
 <br></br>
 Make: <input name="Make"/>
