--- a/insertSearcher.html
+++ b/insertSearcher.html
@@ -1,15 +1,11 @@
 <html>
 <head>
-<style>
-body {background-color:#041c42;}
-p {font-size:14px}
-p.Helv{font-family:Helvetica,serif}
-</style>
+<link rel="stylsheet" type="text/css" href='css/style.css">
 </head>
 <body>
 <center><h2 style="background-color:#ffcc00"> Request a Ride</h2></center>
 <form action="insertSearcher.php" method="get">
-<div id= "inner" style="background-color:#ffcc00">
+<div class="insertForm">
 Username: <input name="username"/>
 <br></br>
 Start Date: <input name=startDate"/>
