--- a/searchDestination.html
+++ b/searchDestination.html
@@ -1,7 +1,13 @@
 <html>
+<head>
+<link rel="stylsheet" type="text/css" href='css/style.css">
+</head>
 <body>
+<center><h2 style="background-color:#ffcc00"> Search for a carpool to a destination</h2></center>
 <form action="searchDestination.php" method="get">
+<div class="insertForm">
 Destination: <input name="destination"/>
+</div>
 <input type="submit"/>
 </form>
 </body>
