--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>CarpoolND</title>
-<link rel="stylsheet" type="text/css" href='css/style.css">
+<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 <center><h2 style="background-color:#ffcc00">CarpoolND</h2></center>
