--- a/insertProfile.html
+++ b/insertProfile.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<link rel="stylsheet" type="text/css" href='css/style.css">
+<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 <center><h2 style="background-color:#ffcc00"> Create Your Profile</h2></center>
