--- a/insertSearcher.html
+++ b/insertSearcher.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<link rel="stylsheet" type="text/css" href='css/style.css">
+<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 <center><h2 style="background-color:#ffcc00"> Request a Ride</h2></center>
@@ -8,7 +8,7 @@
 <div class="insertForm">
 Username: <input name="username"/>
 <br></br>
-Start Date: <input name=startDate"/>
+Start Date: <input name="startDate"/>
 <br></br>
 Starting Point: <input name="startingPoint"/>
 <br></br>
