--- a/searchDestination.html
+++ b/searchDestination.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<link rel="stylsheet" type="text/css" href='css/style.css">
+<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 <center><h2 style="background-color:#ffcc00"> Search for a carpool to a destination</h2></center>
