restructured how the forms are written aka added labels, also changed so pages are on jcobian

--- a/index.html
+++ b/index.html
@@ -9,15 +9,13 @@
 <center>
 <form action="homePage.php" method="post">
 <div class="insertForm">
-Username: <input name="username"/>
-<br></br>
-Password: <input name="password"/>
-<br></br>
+<p><label for="username">Username: </label><input type="text" name="username"/></p>
+<p><label for="password">Password: </label><input type ="password" name="password"/></p>
 <input type="submit" />
 </div>
 </form>
 
-<a href="http://orchestra.cselab.nd.edu/~jwassel/CarpoolND/insertProfile.html">Create a profile</a>
+<a href="http://orchestra.cselab.nd.edu/~jcobian/CarpoolND/insertProfile.html">Create a profile</a>
 </center>
 </body>
 </html>
