--- a/insertProfile.html
+++ b/insertProfile.html
@@ -6,18 +6,12 @@
 <center><h2 style="background-color:#ffcc00"> Create Your Profile</h2></center>
 <form action="insertProfile.php" method="get">
 <div class="insertForm">
-Username: <input name="username"/>
-<br></br>
-First Name: <input name="firstname"/>
-<br></br>
-Last Name: <input name="lastname"/>
-<br></br>
-Phone Number: <input name="phonenumber"/>
-<br></br>
-Email: <input name="email"/>
-<br></br>
-Password: <input name="password"/>
-<br></br>
+<p><label for="username">Username: <input name="username"/></p>
+<p><label for="password">Password: <input name="password"/></p>
+<p><label for="firstname">First Name: <input name="firstname"/></p>
+<p><label for="lastname">Last Name: <input name="lastname"/></p>
+<p><label for="phonenumber">Phone Number: <input name="phonenumber"/></p>
+<p><label for="email">Email: <input name="email"/></p>
 </div>
 <input type="submit"/>
 </form>
