--- a/insertSearcher.html
+++ b/insertSearcher.html
@@ -6,16 +6,11 @@
 <center><h2 style="background-color:#ffcc00"> Request a Ride</h2></center>
 <form action="insertSearcher.php" method="get">
 <div class="insertForm">
-Username: <input name="username"/>
-<br></br>
-Start Date: <input name="startDate"/>
-<br></br>
-Starting Point: <input name="startingPoint"/>
-<br></br>
-Destination: <input name="destination"/>
-<br></br>
-Description: <input name="description"/>
-<br></br>
+<p><label for="username">Username: <input name="username"/></p>
+<p><label for="startDate">Start Date: <input name="startDate"/></p>
+<p><label for="startingPoint">Starting Point: <input name="startingPoint"/></p>
+<p><label for="destination">Destination: <input name="destination"/></p>
+<p><label for="description">Description: <input name="description"/></p>
 <input type="submit"/>
 </div>
 </form>
