--- a/updateTime.html
+++ b/updateTime.html
@@ -5,9 +5,9 @@
 <body>
 <form action="updateTime.php" method="get">
 <div class="insertForm">
-New Time: <input name="time"/>
-Date: <input name="date"/>
-Username: <input name="username"/>
+<p><label for="time">New Time: <input name="time"/></p>
+<p><label for="date">Date: <input name="date"/></p>
+<p><label for="username">Username: <input name="username"/></p>
 </div>
 <input type="submit"/>
 </form>
