--- a/insertCar.html
+++ b/insertCar.html
@@ -6,16 +6,11 @@
 <center><h2 style="background-color:#ffcc00"> Add a Car to your Profile</h2></center>
 <form action="insertCar.php" method="get">
 <div class="insertForm">
-Owner: <input name="owner"/>
-<br></br>
-Make: <input name="Make"/>
-<br></br>
-Model: <input name="Model"/>
-<br></br>
-Year: <input name="Year"/>
-<br></br>
-Number of Seats: <input name="Numberofseats"/>
-<br></br>
+<p><label for="owner">Owner: </label><input name="owner"/></p>
+<p><label for="Make">Make: </label><input name="Make"/></p>
+<p><label for="Model">Model: </label><input name="Model"/></p>
+<p><label for="Year">Year: </label><input name="Year"/></p>
+<p><label for="Numberofseats">Number of Seats: </label> <input name="Numberofseats"/></p>
 </div>
 <input type="submit"/>
 </form>
