--- a/insertCarpool.html
+++ b/insertCarpool.html
@@ -6,41 +6,23 @@
 <center><h2 style="background-color:#ffcc00"> Create a Carpool</h2></center>
 <form action="insertCarpool.php" method="get">
 <div class="insertForm">
-Username: <input name="username"/>
-<br></br>
-Starting Point: <input name="startingPoint"/>
-<br></br>
-Destination: <input name="destination"/>
-<br></br>
-Start Date: <input name="startDate"/>
-<br></br>
-Start Time: <input name="startTime"/>
-<br></br>
-Estimate Time of Arrival: <input name="ETA"/>
-<br></br>
-Description: <input name="description"/>
-<br></br>
-Open Seats: <input name="openSeats"/>
-<br></br>
-Driver: <input name="driver"/>
-<br></br>
-Passenger 1: <input name="passenger1"/>
-<br></br>
-Passenger 2: <input name="passenger2"/>
-<br></br>
-Passenger 3: <input name="passenger3"/>
-<br></br>
-Passenger 4: <input name="passenger4"/>
-<br></br>
-Passenger 5: <input name="passenger5"/>
-<br></br>
-Passenger 6: <input name="passenger6"/>
-<br></br>
-Passenger 7: <input name="passenger7"/>
-<br></br>
-Passenger 8: <input name="passenger8"/>
-<br></br>
-
+<p><label for="username">Username: <input name="username"/></p>
+<p><label for="startingPoint">Starting Point: <input name="startingPoint"/></p>
+<p><label for="destination">Destination: <input name="destination"/></p>
+<p><label for="startDate">Start Date: <input name="startDate"/></p>
+<p><label for="startTime">Start Time: <input name="startTime"/></p>
+<p><label for="ETA">Estimate Time of Arrival: <input name="ETA"/></p>
+<p><label for="description">Description: <input name="description"/></p>
+<p><label for="openSeats">Open Seats: <input name="openSeats"/></p>
+<p><label for="driver">Driver: <input name="driver"/></p>
+<p><label for="passenger1">Passenger 1: <input name="passenger1"/></p>
+<p><label for="passenger2">Passenger 2: <input name="passenger2"/></p>
+<p><label for="passenger3">Passenger 3: <input name="passenger3"/></p>
+<p><label for="passenger4">Passenger 4: <input name="passenger4"/></p>
+<p><label for="passenger5">Passenger 5: <input name="passenger5"/></p>
+<p><label for="passenger6">Passenger 6: <input name="passenger6"/></p>
+<p><label for="passenger7">Passenger 7: <input name="passenger7"/></p>
+<p><label for="passenger8">Passenger 8: <input name="passenger8"/></p>
 <input type="submit"/>
 </div>
 </form>
