--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <center><h2 style="background-color:#ffcc00">CarpoolND</h2></center>
 
 <center>
-<form action="homePage.php" method="post">
+<form action="checkLogin.php" method="post">
 <div class="insertForm">
 <p><label for="username">Username: </label><input type="text" name="username"/></p>
 <p><label for="password">Password: </label><input type ="password" name="password"/></p>
@@ -15,7 +15,7 @@
 </div>
 </form>
 
-<a href="http://orchestra.cselab.nd.edu/~jcobian/CarpoolND/insertProfile.html">Create a profile</a>
+<a href="http://orchestra.cselab.nd.edu/~jwassel/CarpoolND/insertProfile.html">Create a profile</a>
 </center>
 </body>
 </html>
