login finished, added ability to select options from your cars when creating carpool

--- a/index.html
+++ b/index.html
@@ -4,18 +4,9 @@
 <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-<center><h2 style="background-color:#ffcc00">CarpoolND</h2></center>
-
-<center>
-<form action="checkLogin.php" method="post">
-<div class="insertForm">
-<p><label for="username">Username: </label><input type="text" name="username"/></p>
-<p><label for="password">Password: </label><input type ="password" name="password"/></p>
-<input type="submit" />
-</div>
-</form>
-
-<a href="http://orchestra.cselab.nd.edu/~jwassel/CarpoolND/insertProfile.html">Create a profile</a>
-</center>
+<center><h2 style="background-color:#ffcc00">CarpoolND</h2>
+<a href="loginPage.php" style="color:#ffcc00">Login</a>
+<br></br>
+<a href="insertProfile.html" style="color:#ffcc00">Create a profile</a>
 </body>
 </html>
