converted to conform to bootstrap

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
 <head>
 <title>CarpoolND</title>
-<link rel="stylesheet" type="text/css" href="css/style.css">
+<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 </head>
 <body>
-<center><h2 style="background-color:#ffcc00">CarpoolND</h2>
-<a href="loginPage.php" style="color:#ffcc00">Login</a>
+<center><h2>CarpoolND</h2>
+<a href="loginPage.php">Login</a>
 <br></br>
-<a href="insertProfile.html" style="color:#ffcc00">Create a profile</a>
+<a href="insertProfile.html">Create a profile</a>
 </body>
 </html>
