--- a/insertSearcher.html
+++ b/insertSearcher.html
@@ -1,15 +1,15 @@
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="css/style.css">
+<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 </head>
 <body>
-<center><h2 style="background-color:#ffcc00"> Request a Ride</h2></center>
+<center><h2> Request a Ride</h2></center>
 <form action="insertSearcher.php" method="get">
 <div class="insertForm">
-<p><label for="startDate">Start Date: <input name="startDate"/></p>
-<p><label for="startingPoint">Starting Point: <input name="startingPoint"/></p>
-<p><label for="destination">Destination: <input name="destination"/></p>
-<p><label for="description">Description: <input name="description"/></p>
+<div class="form-group"><label for="startDate">Start Date: <input name="startDate"/></div>
+<div class="form-group"><label for="startingPoint">Starting Point: <input name="startingPoint"/></div>
+<div class="form-group"><label for="destination">Destination: <input name="destination"/></div>
+<div class="form-group"><label for="description">Description: <input name="description"/></div>
 <input type="submit"/>
 </div>
 </form>
