--- a/insertProfile.html
+++ b/insertProfile.html
@@ -1,17 +1,17 @@
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="css/style.css">
+<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 </head>
 <body>
-<center><h2 style="background-color:#ffcc00"> Create Your Profile</h2></center>
+<center><h2> Create Your Profile</h2></center>
 <form action="insertProfile.php" method="get">
 <div class="insertForm">
-<p><label for="username">Username: <input name="username"/></p>
-<p><label for="password">Password: <input name="password"/></p>
-<p><label for="firstname">First Name: <input name="firstname"/></p>
-<p><label for="lastname">Last Name: <input name="lastname"/></p>
-<p><label for="phonenumber">Phone Number: <input name="phonenumber"/></p>
-<p><label for="email">Email: <input name="email"/></p>
+<div class= "form-group"><label for="username">Username: <input name="username"/></div>
+<div class= "form-group"><label for="password">Password: <input name="password"/></div>
+<div class= "form-group"><label for="firstname">First Name: <input name="firstname"/></div>
+<div class= "form-group"><label for="lastname">Last Name: <input name="lastname"/></div>
+<div class= "form-group"><label for="phonenumber">Phone Number: <input name="phonenumber"/></div>
+<div class= "form-group"><label for="email">Email: <input name="email"/></div>
 </div>
 <input type="submit"/>
 </form>
