--- a/insertProfile.html
+++ b/insertProfile.html
@@ -7,7 +7,8 @@
 <form action="insertProfile.php" method="get">
 <div class="insertForm">
 <div class= "form-group"><label for="username">Username: <input name="username"/></div>
-<div class= "form-group"><label for="password">Password: <input name="password"/></div>
+<div class= "form-group"><label for="password">Password: <input name="password" type="password"/></div>
+<div class= "form-group"><label for="confirmPassword">Confirm Password: <input name="confirmPassword" type="password"/></div>
 <div class= "form-group"><label for="firstname">First Name: <input name="firstname"/></div>
 <div class= "form-group"><label for="lastname">Last Name: <input name="lastname"/></div>
 <div class= "form-group"><label for="phonenumber">Phone Number: <input name="phonenumber"/></div>
