--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 <title>CarpoolND</title>
 <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 <center><h2>CarpoolND</h2>
