login works, other visual fixes

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <center><h2>CarpoolND</h2>
 <a href="loginPage.php">Login</a>
 <br></br>
-<a href="insertProfile.html">Create a profile</a>
+<a href="createProfile.php">Create a profile</a>
 </body>
 </html>
